2012-09-12  Vladimir Serbinenko  <phcoder@gmail.com>

	Don't require grub-mkconfig_lib to generate manpages for programs.

	* gentpl.py (manpage): Additional argument adddeps. Add adddeps to
	dependencies, don't add grub-mkconfig_lib.
	(program): Pass empty adddeps.
	(script): Pass grub-mkconfig_lib as adddeps.

2012-09-11  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/disk/diskfilter.c (free_array) [GRUB_UTIL]: Fix memory leak.
	* util/getroot.c (grub_find_device): Likewise.
	(get_mdadm_uuid): Likewise.
	(grub_util_is_imsm): Likewise.
	(grub_util_pull_device): Likewise.
	* util/grub-probe.c (probe): Likewise.

2012-09-10  Benoit Gschwind <gschwind>

	* grub-core/loader/efi/appleloader.c (devpath_8): New var.
	(devs): Add devpath_8.

2012-09-08  Peter Jones <pjones@redhat.com>

	* grub-core/Makefile.core.def (efifwsetup): New module.
	* grub-core/commands/efi/efifwsetup.c: New file.
	* grub-core/kern/efi/efi.c (grub_efi_set_variable): New function
	* include/grub/efi/api.h (GRUB_EFI_OS_INDICATIONS_BOOT_TO_FW_UI):
	New define.
	* include/grub/efi/efi.h (grub_efi_set_variable): New proto.

2012-09-05  Jiri Slaby <jslaby@suse.cz>

	* configure.ac: Add SuSe path.

2012-09-05  Colin Watson  <cjwatson@ubuntu.com>

	* NEWS: Fix typo.

2012-09-05  Colin Watson  <cjwatson@ubuntu.com>

	* util/import_gcry.py: Sort cipher_files, to make build system
	generation more deterministic.

2012-09-05  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/disk/ieee1275/ofdisk.c (scan): Check function return value.
	* grub-core/lib/ieee1275/datetime.c (grub_get_datetime): Likewise.
	(grub_set_datetime): Likewise.

2012-09-05  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/script/yylex.l: Ignore unused-function and sign-compare
	warnings.

2012-09-05  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/partmap/dvh.c (grub_dvh_is_valid): Add missing byteswap.

2012-09-05  Vladimir Serbinenko  <phcoder@gmail.com>
